<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:id="@+id/scrollView"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <ImageView
                android:id="@+id/ivPoster"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:contentDescription="@string/move_poster_description" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingEnd="2dp"
                android:paddingLeft="5dp"
                android:paddingRight="2dp"
                android:paddingStart="5dp">

                <ImageView
                    android:id="@+id/ivFavorite"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="right"
                    android:src="@drawable/selector_fav_button" />

                <TextView
                    android:id="@+id/tvReleaseDateTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date_label"
                    android:textColor="#000"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <TextView
                    android:id="@+id/tvReleaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="2dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="2dp"
                    android:textColor="#000"
                    android:text="@string/release_date_label"
                    android:textSize="@dimen/abc_text_size_large_material" />

                <TextView
                    android:id="@+id/tvUserRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:textColor="#000"
                    android:text="@string/user_rating"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <TextView
                    android:id="@+id/tvVoteAverage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="2dp"
                    android:textColor="#000"
                    android:paddingLeft="10dp"
                    android:paddingRight="2dp"
                    android:text="@string/vote_average"
                    android:textSize="@dimen/abc_text_size_large_material" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textview_original_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:textColor="#000"
                android:text="@string/original_title"
                android:textSize="@dimen/abc_text_size_headline_material" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_overview"
                    android:layout_width="wrap_content"
                    android:textColor="#000"
                    android:layout_height="wrap_content"
                    android:text="@string/overview" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="Trailers"
                        android:layout_marginTop="10dp"
                        android:textColor="#000000"
                        android:textSize="25dp"
                        android:textStyle="bold" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rvWatchTrailer"
                        android:nestedScrollingEnabled="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Reviews"
                        android:layout_marginTop="10dp"
                        android:textColor="#000000"
                        android:textSize="25dp"
                        android:textStyle="bold" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rvReview"
                        android:nestedScrollingEnabled="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
